--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <!DOCTYPE html>
+<head>
+    <style>
+        body {background-image: image(https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3ABanana-Single.jpg&psig=AOvVaw2JWgHjfkuVFajj_ae1wUvm&ust=1744866116881000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCIjR0_ni24wDFQAAAAAdAAAAABAE);
+    </style>
+</head>
+
 
