--- a/.html
+++ b/.html
@@ -2,6 +2,7 @@
 <head>
     <style>
         body {background-color: aquamarine;
+              <iframe src="https://games.crazygames.com/en_US/shellshockersio/index.html" width="800" height="600" frameborder="0" allowfullscreen></iframe>
     </style>
 </head> 
 <body>
